syntax = "proto3";
package game;

enum GameType {
  GAME_TYPE_UNSPECIFIED = 0;
  GAME_TYPE_TIC_TAC_TOE = 1;
  GAME_TYPE_CHESS = 2;
}

// if next_player_id is not set than the game is finished
// if the game is finished and winner is not set than it's a draw
message GameState {
  optional uint64 next_player_id = 1;
  optional uint64 winner = 2;
}

message GameInfo {
  uint64 game_id = 1;
  repeated uint64 players = 2;
  GameState game_state = 3;
}

message Position {
  uint32 row = 1;
  uint32 col = 2;
}

message PositionPair {
  Position first = 1;
  Position second = 2;
}
